#221 Fixed left text alignment not working for song about. <Jaideep>

--- a/web/app/user/sass/components/_detailsLayout.scss
+++ b/web/app/user/sass/components/_detailsLayout.scss
@@ -1,3 +1,6 @@
+.about-text {
+  text-align: left;
+}
 .details {
     background: transparent url(/user/img/songs/song_detail_bg_tiledY.jpg) left top;
     background-repeat: no-repeat repeat;
